--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +13,7 @@
 </head>
 
 <body>
-    <section class="">
+    <section class="max-w-screen-2xl mx-auto">
         <nav class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 relative mx-auto">
             <a class="w-8 mr-6" href="#"><img src="./images/workflow-mark-indigo-600.svg" /></a>
             <div class="text-base lg:text-lg hidden md:inline-block">
@@ -44,7 +43,7 @@
         </nav>
         <div class="flex h-auto lg:h-[87.1vh] flex-wrap items-center">
             <div
-                class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10 ">
+                class="py-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10 ">
                 <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full md:pr-10">
                     Data to enrich your
                     <span class="block text-indigo-700 mt-2">online business</span>
@@ -67,7 +66,7 @@
                 src="./images/photo-1551434678-e076c223a692.webp" />
         </div>
     </section>
-    <section class="px-4 py-6 text-center">
+    <section class="px-4 py-6 text-center max-w-screen-2xl mx-auto">
         <div class="w-auto max-w-3xl mx-auto py-12">
             <h2 class="text-base text-indigo-700 text-medium md:font-semibold mb-2">
                 TRANSACTION
@@ -149,20 +148,21 @@
             </div>
         </div>
     </section>
-    <section class="bg-indigo-700 mx-4 py-10 px-4 md:mx-8 md:py-16 md:px-20 rounded-md my-8">
-        <h1 class="text-white text-4xl md:text-5xl font-bold mb-6">
-            Ready to dive in?<br>
-            Start you're free trial<br>
-            today.
-        </h1>
-        <p class="text-white text-opacity-80 max-w-2xl font-normal text-base md:text-lg mb-6">Lorem ipsum, dolor sit
-            amet consectetur
-            adipisicing elit. Maiores
-            impedit perferendis suscipit eaque, iste dolor cupiditate
-            blanditiis ratione.</p>
-        <button
-            class="bg-white hover:bg-gray-200 hover:text-indigo-700 text-indigo-600 text-opacity-90 text-base md:text-lg font-medium py-3 px-5 rounded-md">Sign
-            up for free</button>
+    <section class="max-w-screen-2xl mx-auto">
+        <div class="bg-indigo-700 mx-4 py-10 px-4 md:mx-8 md:py-16 md:px-20 rounded-md my-8">
+            <h1 class="text-white text-4xl md:text-5xl font-bold mb-6">
+                Ready to dive in?<br>
+                Start you're free trial <span class="inline md:block">today.</span>
+            </h1>
+            <p class="text-white text-opacity-80 max-w-2xl font-normal text-base md:text-lg mb-6">Lorem ipsum, dolor sit
+                amet consectetur
+                adipisicing elit. Maiores
+                impedit perferendis suscipit eaque, iste dolor cupiditate
+                blanditiis ratione.</p>
+            <button
+                class="bg-white hover:bg-gray-200 hover:text-indigo-700 text-indigo-600 text-opacity-90 text-base md:text-lg font-medium py-3 px-5 rounded-md">Sign
+                up for free</button>
+        </div>
     </section>
     <section class="py-6 px-4 md:py-12 md:px-6">
         <div class="flex flex-col flex-wrap">
@@ -177,7 +177,7 @@
         </div>
         <div class="flex flex-wrap justify-between py-20">
             <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
-                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-8">
                     <h1 class="text-xl text-gray-800 font-medium mb-2">Hobby</h1>
                     <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$12<span
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
-                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-8">
                     <h1 class="text-xl text-gray-800 font-medium mb-2">Startup</h1>
                     <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$32<span
@@ -264,7 +264,7 @@
                 </div>
             </div>
             <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
-                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-8">
                     <h1 class="text-xl text-gray-800 font-medium mb-2">Enterprice</h1>
                     <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$48<span
